@@ -1,5 +1,11 @@
 1.4.0-vcli-alpha Sara
 
+* Added a WS in the new created jobs section to pull the current console output of a job
+
+* Modified the interactive execution methods to create a new persistent print writer
+
+* Created a persistent print writer wrapper to store the execution console
+
 * Created the web service that list the status of the jobs run in the cluster so far
 
 * Added to query and mechanics to manage job statuses
